<resources>
    <string name="app_name">BeaconPlus</string>
    <string name="TurnOnButton">Turn On Bluetooth</string>
    <string name="TurnOffButton">Turn Off Bluetooth</string>
    <string name="Dicoverbtn">Turn On Dicscoverable </string>
    <string name="AvailableDevices"> Scan Devices</string>
    <string name="ShowPairedDevices">Paired devices</string>
    <string name="startscan">Start Scan</string>
    <string name="stopscan">Stop Scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>