<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/bltImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_baseline_bluetooth_24"
></ImageView>
    <Button
        android:id="@+id/turnonbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/TurnOnButton"
        android:textAlignment="center"
        android:textSize="10sp">

    </Button>

    <Button
        android:id="@+id/turnoffbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/TurnOffButton"
        android:textAlignment="center"
        android:textSize="10sp">

    </Button>


    <Button
        android:id="@+id/discoverbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Dicoverbtn"
        android:textAlignment="center"
        android:textSize="10sp">

    </Button>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/showpaireddevicesbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ShowPairedDevices"
        android:textAlignment="center"
        android:textSize="10sp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="40dp">

    </Button>
    <Button
        android:id="@+id/scanDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/AvailableDevices"
        android:textAlignment="center"
        android:textSize="10sp">

    </Button>


</LinearLayout>

    <ProgressBar
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
     </ProgressBar>


    <TextView
        android:id="@+id/DevicesTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Devices"
        android:layout_gravity="center"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>


    <androidx.fragment.app.FragmentContainerView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_container">
    </androidx.fragment.app.FragmentContainerView>

    <FrameLayout
        android:id="@+id/fragment_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>